[project]
name = "pengolodh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Patrick Armstrong", email = "patrick.james.1998@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pengolodh = "pengolodh:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
